# ChefOeuvre

./: CMakeLists.txt  README.md
ColorData/: blackcloth.cpp  bluepostit.cpp  browndoor.cpp  canvashard.cpp  canvassoft.cpp  cardboard.cpp  ciestandardA.cpp  ciestandardD65.cpp  dkblue.cpp  florescents.cpp  lights.cpp  ltblue.cpp  manilla.cpp  paintmix.xls  tancolor.cpp
ColorData/samples/: bkg_blackcloth  bkg_bluepostit  bkg_browndoor  bkg_canvashard  bkg_canvassoft  bkg_cardboard  bkg_envelope  bkg_manilla  bkg_paper  lgt_light  lgt_light1  mix_och_pbl_000  mix_och_pbl_025  mix_och_pbl_050  mix_och_pbl_075  mix_och_pbl_100  mix_twh_sgr_000  mix_twh_sgr_025  mix_twh_sgr_050  mix_twh_sgr_075  mix_twh_sgr_100  mix_vir_crm_000  mix_vir_crm_025  mix_vir_crm_050  mix_vir_crm_075  mix_vir_crm_100  mon_crtblack  mon_crtblue  mon_crtgreen  mon_crtred  mon_crtwhite  mon_lcdblack  mon_lcdblue  mon_lcdgreen  mon_lcdred  mon_lcdwhite  pnt_cadred  pnt_cadred1  pnt_cadredwh  pnt_cadredwh1  (+43 more)
src/: mixeur.cpp  mixeur.h  mixeur.ui  pipeline_gpu.cpp  renderingwidget.cpp  shader.cpp
